--- a/황진관.html
+++ b/황진관.html
@@ -9,16 +9,12 @@
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Noto+Sans&display=swap" rel="stylesheet">
 </head>
-<style>
-    .fa-solid{
-        color:black;    
-    }
-</style>
+
 <body id = "body-top">
     <!-- 화면 상단 부분 -->
     <header class="header">
         <div class = "hc-1">
-            
+            <div></div>
         </div>
         <div class = "hc-2">
             <div class="image-container">
